--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,17 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    android:background="@color/background_color"
+    tools:context=".ui.SplashScreen">
 
-
-    <TextView
-        android:id="@+id/current_temp"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_splash_screen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/_21" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_rawRes="@raw/splash_screen_anim"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
